# ConvNet

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
cnn_cpp/: CMakeLists.txt  README.md
cnn_cpp/configs/: mnist_cnn.txt  sample_infer_arch.txt
cnn_cpp/data/: demo_train_images.txt  sample_input.txt  test_images.idx3-ubyte  test_labels.idx1-ubyte
cnn_cpp/include/: checkpoint_io.hpp  conv2d.hpp  cross_entropy.hpp  eval_utils.hpp  flatten.hpp  image_loader.hpp  layer.hpp  linear.hpp  loss.hpp  maxpool2d.hpp  model_config.hpp  model_io.hpp  optimizer.hpp  project_config.hpp.in  relu.hpp  sequential.hpp  sgd.hpp  shape.hpp  softmax.hpp  tensor.hpp  utils.hpp  weights_loader.hpp
cnn_cpp/scripts/: generate_release_assets.py
cnn_cpp/src/: benchmark_mnist.cpp  checkpoint_io.cpp  conv2d.cpp  cross_entropy.cpp  eval.cpp  eval_utils.cpp  first_milestone.cpp  flatten.cpp  image_loader.cpp  linear.cpp  main.cpp  maxpool2d.cpp  mnist_train.cpp  model_config.cpp  model_io.cpp  relu.cpp  sequential.cpp  sgd.cpp  softmax.cpp  tensor.cpp  train_demo.cpp  utils.cpp  weights_loader.cpp
cnn_cpp/tests/: test_checkpoint_io.cpp  test_conv2d.cpp  test_flatten.cpp  test_gradient_check.cpp  test_io.cpp  test_linear.cpp  test_maxpool2d.cpp  test_model_config.cpp  test_model_io.cpp  test_relu.cpp  test_sequential.cpp  test_softmax.cpp  test_stage2.cpp  test_tensor.cpp
cnn_cpp/weights/: conv1_bias.txt  conv1_weights.txt  conv2_bias.txt  conv2_weights.txt  fc_bias.txt  fc_weights.txt  sample_infer_model.txt  test_roundtrip.txt
cnn_cpp/weights/trained_demo/: conv_bias.txt  conv_weights.txt  layer_0_bias.txt  layer_0_weights.txt  layer_1_bias.txt  layer_1_weights.txt  linear_bias.txt  linear_weights.txt  model.txt
docs/releases/: v0.1.0.md
